--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 openai
 streamlit
 langchain
-streamlit_extras
-firebase_admin
-google_auth_oauthlib
-googleapiclient
+streamlit-extras
 webbrowser
 base64
-pptx
+firebase-admin
+google-cloud-core
+google-cloud-storage
+google-cloud-firestore
+google-auth-oauthlib
+google-auth
+google-api-core
+google-api-python-client
+oauthlib
 pdfplumber
-google.cloud
+python-pptx
+toml
