--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,19 @@ openai
 streamlit
 langchain
 streamlit-extras
-webbrowser
 base64
 firebase-admin
-google-cloud-core
-google-cloud-storage
-google-cloud-firestore
-google-auth-oauthlib
-google-auth
 google-api-core
 google-api-python-client
+google-auth 
+google-auth-httplib2 
+google-auth-oauthlib
+google-cloud-core 
+google-cloud-firestore 
+google-cloud-storage 
+google-crc32c
+google-resumable-media 
+googleapis-common-protos 
 oauthlib
 pdfplumber
 python-pptx
